--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -28,6 +28,12 @@
   </div>
 
   <div fxFlex="40">
-    Display item comments here
+    <mat-list dense>
+      <mat-list-item *ngFor="let comment of item.comments">
+        <p matLine>{{comment.comment}}</p>
+        <p matLine>{{comment.rating}} Stars</p>
+        <p matLine><cite>-- {{comment.author}} {{comment.date | date}}</cite></p>
+      </mat-list-item>
+    </mat-list>
   </div>
 </div>
