--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -16,7 +16,7 @@
     -->
     <mat-grid-list [cols]="2" bind-rowHeight="'200px'" [gutterSize]="'10px'">
       <mat-grid-tile *ngFor="let item of items" [colspan]="1" [rowspan]="1"
-                     (click)="onSelect(item)">
+                     on-click="onSelect(item)">
         <img height="200px" src={{item.image}} alt={{item.name}}>
         <mat-grid-tile-footer>
           <h1 mat-line>{{item.name | uppercase}}</h1>
@@ -25,6 +25,6 @@
     </mat-grid-list>
 
   </div>
-  <app-item-detail [item]="selectedItem"></app-item-detail>
+  <app-item-detail bind-item="selectedItem"></app-item-detail>
 
 </div>
