uso de activated route y location

--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -19,8 +19,9 @@
           <p>{{item.description}}</p>
         </mat-card-content>
         <mat-card-actions align="start">
-          <button mat-button (click)="onAction($event)">LIKE</button>
-          <button mat-button (click)="onAction($event)">SHARE</button>
+          <button mat-button (click)="goBack()">BACK</button>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
         </mat-card-actions>
       </mat-card>
     </div>
