--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,4 +18,22 @@
       </p>
     </mat-card-content>
   </mat-card>
+
+  <mat-card *ngIf="employee" fxFlex>
+    <mat-card-header>
+      <div mat-card-avatar></div>
+      <mat-card-title>
+        <h3>{{employee.name | uppercase}}</h3>
+      </mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src={{employee.image}} alt={{employee.name}}>
+    <mat-card-content>
+      <p>{{employee.jobPosition}}
+      </p>
+      <p>{{employee.jobDescription}}
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+
 </div>
