--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     Login
   </div>
   <span fxFlex class="flex-spacer"></span>
-  <div fxFlex>
+  <div fxFlex align="end">
     <button mat-button mat-dialog-close>&times;</button>
   </div>
 </mat-toolbar>
