--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,15 +12,25 @@
 <form novalidate #loginForm="ngForm" (ngSubmit)="onSubmit()">
   <mat-dialog-content>
     <p>
-      <mat-input-container>
+      <mat-input-container dividerColor="{{username.invalid && !username.pristine?'warn':'primary'}}">
         <input matInput [(ngModel)]="user.name"
                type="text"
                placeholder="Username" name="username" #username="ngModel" required>
+        <mat-hint>
+          <span [hidden]="username.pristine">
+            <span [hidden]="!username.errors?.required">username is required</span>
+          </span>
+        </mat-hint>
       </mat-input-container>
-      <mat-input-container>
+      <mat-input-container dividerColor="{{password.invalid && !password.pristine ? 'warn' : 'primary'}}">
         <input matInput [(ngModel)]="user.password"
                type="password"
                placeholder="Password" name="password" #password="ngModel" required>
+        <mat-hint>
+          <span [hidden]="password.pristine">
+            <span [hidden]="!password.errors?.required">password is required</span>
+          </span>
+        </mat-hint>
       </mat-input-container>
       <mat-checkbox [(ngModel)]="user.remember" name="remember" color="primary">Remember me</mat-checkbox>
     </p>
