--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -39,7 +39,7 @@
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
     <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
-    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" id="form">
       <p>
         <mat-input-container class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
