--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -15,22 +15,16 @@
     bind-propiedadDelComponente="valorDesdeElDOM"
     -->
     <mat-grid-list [cols]="2" bind-rowHeight="'200px'" [gutterSize]="'10px'">
-      <mat-grid-tile *ngFor="let item of items" [colspan]="1" [rowspan]="1"
-                     [routerLink]="['/itemdetail', item.id]">
-        <img height="200px" src={{item.image}} alt={{item.name}}>
+      <mat-grid-tile *ngFor="let item of items" [routerLink]="['/itemdetail', item.id]">
+        <img height="200px" data-src="data:image/png;base64,{{item.image}}" alt={{item.name}}>
         <mat-grid-tile-footer>
           <h1 mat-line>{{item.name | uppercase}}</h1>
         </mat-grid-tile-footer>
       </mat-grid-tile>
     </mat-grid-list>
-
   </div>
-
   <div [hidden]="items">
     <mat-spinner></mat-spinner>
     <h4>Loading . . . Please Wait</h4>
   </div>
-
-  <app-item-detail></app-item-detail>
-
 </div>
