--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -6,7 +6,6 @@
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
   <div fxFlex="40">
-
     <div fxFlex *ngIf="item">
       <mat-card>
         <mat-card-title-group>
@@ -14,9 +13,10 @@
             <h3>{{item.name | uppercase}}</h3>
           </mat-card-title>
         </mat-card-title-group>
-        <img matCardImage src={{item.image}} alt={{item.name}}>
+        <img matCardImage data-src="data:image/png;base64,{{item.image}}" alt={{item.name}}>
         <mat-card-content>
-          <p>{{item.description}}</p>
+          <p>{{item.description}}
+          </p>
         </mat-card-content>
         <mat-card-actions align="start">
           <button mat-button [routerLink]="['/itemdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span>
@@ -30,15 +30,15 @@
         </mat-card-actions>
       </mat-card>
     </div>
-
   </div>
 
   <div fxFlex="40" *ngIf="item">
-    <mat-list dense>
+    <mat-list>
+      <h3 mat-header>Comments</h3>
       <mat-list-item *ngFor="let comment of item.comments">
         <p matLine>{{comment.comment}}</p>
         <p matLine>{{comment.rating}} Stars</p>
-        <p matLine><cite>-- {{comment.author}} {{comment.date | date}}</cite></p>
+        <p matLine>-- {{comment.author}} {{comment.date | date}}</p>
       </mat-list-item>
     </mat-list>
   </div>
