--- a/styles.scss
+++ b/styles.scss
@@ -20,6 +20,10 @@ $divider-color: #BDBDBD;
 
 // some basic resets
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
 body {
   padding: 0;
   margin: 0;
@@ -27,7 +31,6 @@ body {
 }
 
 .container {
-  margin: 20px;
   display: flex;
 }
 
