--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-12">
+      <app-header></app-header>
+    </div>
+    <div class="col col-lg-12">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col col-lg-12">
+      <app-footer></app-footer>
+    </div>
+  </div>
+</div>
