--- a/src/app/components/employee-register-form/employee-register-form.component.css
+++ b/src/app/components/employee-register-form/employee-register-form.component.css
@@ -1,44 +1,97 @@
-.adv-category-edit-form {
+.create-employee-form {
   background-color: #F1F1F1;
-  margin-right: 25%;
-  margin-left: 25%;
   border-radius: 10px;
   padding-bottom: 50px;
-  width: 550px;
-  margin-top: 100px;
-  padding-left: 120px;
+  width: 100%;
+  margin-top: 20px;
+  padding: 20px;
+  height: 800px;
 }
 
-.adv-category-edit-form #adv-cancel {
-  border-radius: 30px;
-  margin-left: 50px;
+.contract {
+  height: 600px;
 }
 
-.adv-category-edit-form #adv-edit {
-  border-radius: 30px;
+.button-section {
+  height: 200px;
 }
 
-.adv-category-edit-form form fieldset div #adv-category-name {
-  font-size: 15px;
-  text-align: left;
-  width: 280px;
+.profile-image img{
+  width: 300px;
+  height: 300px;
+  background-size: 100% 100%;
+  margin-top: 20px;
 }
 
-.adv-category-edit-form form fieldset div #name-label{
-  margin-right: 200px;
+.form-employee-container {
+  background-color: #F1F1F1;
+  border-radius: 10px;
+  padding-bottom: 50px;
+  padding: 20px;
+  height: 1850px;
+  margin-bottom: 20px;
 }
 
-.adv-category-edit-form form fieldset .form-group textarea {
-  resize: none;
-  border-radius: 5%;
-  margin-right: 130px;
-  width: 280px;
+.left {
+  width: 40%;
+  float: left;
 }
 
-.adv-category-edit-form .alert {
-  position: absolute;
-  top: 75%;
-  left: 35%;
-  width: 30%;
-  z-index: 10;
+.right {
+  width: 40%;
+  float: right;
+}
+
+#experience {
+  width: 250%;
+}
+
+.form-employee-container h2 {
+  border-bottom: 1px solid black;
+}
+
+.form-employee-container h2 {
+  margin-top: 30px;
+  background-color: #235655;
+  color: white;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.form-employee-container select {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
+}
+
+#conctractDescription {
+  width: 100%;
+}
+
+.form-employee-container .alert {
+  background-color: #862600;
+  color: white
+}
+
+.router-to-employee-list {
+  display: none;
+}
+
+@media only screen and (max-width: 1350px) {
+  .form-employee-container {
+    width: 1350px;
+  }
 }
