--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,7 @@
   <a mat-button routerLink="/about"><span class="fa fa-info fa-lg"></span> About</a>
   <a mat-button routerLink="/catalog"><span class="fa fa-list fa-lg"></span> Catalog</a>
   <a mat-button routerLink="/contact"><span class="fa fa-address-card fa-lg"></span> Contact</a>
+  <a mat-button routerLink="/type-equipment"><span class="fa fa-list fa-lg"></span> Type Equipment</a>
   <span class="flex-spacer"></span>
   <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
 
