--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,7 @@
   <a mat-button routerLink="/contact"><span class="fa fa-address-card fa-lg"></span> Contact</a>
   <button mat-button [matMenuTriggerFor]="positions"><span class="fa fa-list fa-lg"></span> Position</button>
   <a mat-button routerLink="/type-equipment"><span class="fa fa-list fa-lg"></span> Type Equipment</a>
+  <a mat-button routerLink="/employees-list" class="employees-icon"><span class="glyphicon glyphicon-book"></span> Employees</a>
   <span class="flex-spacer"></span>
   <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
 </mat-toolbar>
