--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,10 +3,11 @@
   <a mat-button routerLink="/home"><span class="fa fa-home fa-lg"></span> Home</a>
   <a mat-button routerLink="/about"><span class="fa fa-info fa-lg"></span> About</a>
   <button mat-button [matMenuTriggerFor]="positions"><span class="fa fa-list fa-lg"></span> Position</button>
-  <a mat-button routerLink="/type-equipment"><span class="fa fa-list fa-lg"></span> Type Equipment</a>
+ <a mat-button routerLink="/type-equipment"><span class="fa fa-list fa-lg"></span> Type Equipment</a>
   <a mat-button routerLink="/employees-list" class="employees-icon"><span class="glyphicon glyphicon-book"></span> Employees</a>
   <a mat-button routerLink="/projects" class="fa fa-building"><span class="glyphicon glyphicon-book"></span> Projects</a>
   <span class="flex-spacer"></span>
+   <span class="flex-spacer"></span>
   <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
 </mat-toolbar>
 <mat-menu #positions="matMenu">
@@ -22,7 +23,7 @@
      fxLayoutAlign.sm="start center"
      fxLayoutAlign.gt-sm="center center"
      fxLayoutGap="10px">
-
+<!--
   <div fxFlex fxFlex.gt-sm="50%">
     <h1>SSI</h1>
     <p>We take inspiration from the World's best safety practices, and create a unique fusion experience. Our awesome
@@ -33,4 +34,8 @@
     <img src="../../assets/images/safetylogo.png" alt="Logo" width="200" height="200">
   </div>
   <div fxFlex></div>
+  -->
 </div>
+
+  <p></p>
+
